# rusty_torrent

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  watch
src/: decoder.rs  download.rs  hash.rs  ipc.rs  listener.rs  main.rs  metainfo.rs  peer_connection.rs  request_metadata.rs  request_queue.rs  tracker.rs  tracker_response.rs
test_data/: flagfromserver.torrent  ubuntu-15.04-server-amd64.iso.torrent
