[package]
name = "rusty_torrent"
description = "A BitTorrent client, written in Rust."
repository = "https://github.com/kenpratt/rusty_torrent"
version = "0.0.1"
readme = "README.md"
keywords = ["bittorrent"]
authors = ["ken@kenpratt.net", "pietromenna@yahoo.com"]


[dependencies]
bencode = "0.1"
getopts = "0.2"
hyper = "0.5"
rand = "0.3"
rust-crypto = "0.2"
url = "0.2"
